--- a/toolkit/sidechain/domain/Cargo.toml
+++ b/toolkit/sidechain/domain/Cargo.toml
@@ -34,6 +34,7 @@ secp256k1 = { workspace = true, features = ["hashes", "alloc"] }
 ed25519-zebra = { workspace = true, optional = true }
 k256 = { workspace = true }
 derive-where = { workspace = true }
+sp-runtime = { workspace = true, optional = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
@@ -55,5 +56,7 @@ std = [
 	"secp256k1/global-context",
 	"ed25519-zebra",
 	"ed25519-zebra/std",
+	"sp-runtime?/std",
 ]
 serde = ["dep:serde", "scale-info/serde", "sp-core/serde"]
+app-crypto = ["dep:sp-runtime"]
