fix: change ARN for ci-preview tests job only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -850,7 +850,7 @@ jobs:
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_ }}
           aws-region: ${{ env.AWS_REGION }}
       - name: Checkout
         uses: actions/checkout@v4
