fix: run smoke e2e tests on post-merge

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -870,6 +870,7 @@ jobs:
           env: ci
           decrypt: true
           blockchain: substrate
+          markers: smoke
         env:
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
