--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -3,6 +3,7 @@ markers =
     # smoke tests
     smoke: block producing, transactions, etc.
     rpc: node RPC methods
+    ci: tests that can pass on a brand new partner-chain in CI environment
 
     # main features
     ariadne: committee selection algorithm
