--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -11,7 +11,7 @@ inputs:
     required: false
     default: 'test_'
   markers:
-    description: 'Run tests by markers (-m). Available markers: smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards or full'
+    description: 'Run tests by markers (-m). Available markers: ci, smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards or full'
     required: false
   mc_epoch:
     description: 'MC epoch to test (committee tests)'
