--- a/toolkit/data-sources/dolos/Cargo.toml
+++ b/toolkit/data-sources/dolos/Cargo.toml
@@ -27,6 +27,19 @@ sp-block-participation = { workspace = true, features = [
 sp-partner-chains-bridge = { workspace = true, optional = true, features = [
     "std",
 ] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+log = { workspace = true }
+blockfrost-openapi = { workspace = true }
+ureq = { workspace = true, features = ["json"] }
+url = { workspace = true }
+thiserror = { workspace = true }
+partner-chains-plutus-data = { workspace = true }
+futures = { workspace = true }
+cardano-serialization-lib = { workspace = true }
+itertools = { workspace = true }
+figment = { workspace = true }
+tokio = { workspace = true }
 
 [features]
 default = []
