update: set staging variables after v1.8.1 deploy

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,6 +11,7 @@ on:
         options:
         - devnet
         - ci
+        - staging
       keyword:
         description: 'Run tests by keyword (-k)'
         type: string
