--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -4,10 +4,12 @@ markers =
     smoke: block producing, transactions, etc.
     rpc: node RPC methods
     ci: tests that can pass on a brand new partner-chain in CI environment
+    staging: tests that can pass on a nightly staging environment
 
     # main features
     ariadne: committee selection algorithm
     reserve: reserve management system
+    bridge: bridge management system
     governed_map: arbitrary data stored on the main chain
     delegator_rewards: ADA delegator rewards
     dolos: tests that require dolos data source
