--- a/toolkit/block-production-log/pallet/Cargo.toml
+++ b/toolkit/block-production-log/pallet/Cargo.toml
@@ -24,6 +24,8 @@ sp-block-production-log = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
+pallet-block-participation = { workspace = true, optional = true }
+
 [dev-dependencies]
 sp-core = { workspace = true }
 sp-io = { workspace = true }
@@ -40,9 +42,13 @@ std = [
 	"sidechain-domain/std",
 	"sp-block-production-log/std",
 	"sp-std/std",
+	"pallet-block-participation?/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
+]
+block-participation = [
+    "dep:pallet-block-participation",
 ]
