--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -56,6 +56,8 @@ runs:
         markers_switch=""
         if [ "${{ inputs.markers }}" = "wizards" ]; then
           markers_switch="-m smoke"
+        elif [ "${{ inputs.markers }}" = "dolos" ]; then
+          markers_switch="-m smoke"
         elif [ -n "${{ inputs.markers }}" ]; then
           markers_switch="-m '${{ inputs.markers }}'"
         fi
