--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -10,6 +10,7 @@ markers =
     reserve: reserve management system
     governed_map: arbitrary data stored on the main chain
     delegator_rewards: ADA delegator rewards
+    dolos: tests that require dolos data source
     
     # helper tags
     skip_on_new_chain: skip test on new chain (less than 2 MC epochs have passed)
