--- a/dev/envs/ci-preview/.envrc
+++ b/dev/envs/ci-preview/.envrc
@@ -20,6 +20,6 @@ export BRIDGE_TOKEN_ASSET_NAME=$(echo $NATIVE_TOKEN_ASSET_NAME)
 
 # Operational parameters allowing to run node after sourcing this file
 export DB_SYNC_POSTGRES_CONNECTION_STRING="postgres://postgres:password123@localhost/cexplorer"
-export DOLOS_MINIBF_URL: "localhost:3000"
+export DOLOS_MINIBF_URL="localhost:3000"
 export CARDANO_DATA_SOURCE="db-sync"
 export BLOCK_STABILITY_MARGIN=0
