--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -57,7 +57,7 @@ runs:
         if [ "${{ inputs.markers }}" = "wizards" ]; then
           markers_switch="-m smoke"
         elif [ "${{ inputs.markers }}" = "dolos" ]; then
-          markers_switch="-m smoke"
+          markers_switch=""
         elif [ -n "${{ inputs.markers }}" ]; then
           markers_switch="-m '${{ inputs.markers }}'"
         fi
