fix: install nix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v11
         with:
-          nix-conf: |
-            extra-experimental-features = nix-command flakes
-            extra-substituters = https://cache.nixos.org/
-            extra-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+          extra-conf: |
+            experimental-features = nix-command flakes
+            substituters = https://cache.nixos.org/
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
       - name: Compute APT cache key
         id: aptmeta
@@ -203,10 +203,10 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v11
         with:
-          nix-conf: |
-            extra-experimental-features = nix-command flakes
-            extra-substituters = https://cache.nixos.org/
-            extra-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+          extra-conf: |
+            experimental-features = nix-command flakes
+            substituters = https://cache.nixos.org/
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
       - name: Compute APT cache key
         id: aptmeta
@@ -419,10 +419,10 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v11
         with:
-          nix-conf: |
-            extra-experimental-features = nix-command flakes
-            extra-substituters = https://cache.nixos.org/
-            extra-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+          extra-conf: |
+            experimental-features = nix-command flakes
+            substituters = https://cache.nixos.org/
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
       - name: Compute APT cache key
         id: aptmeta
@@ -749,10 +749,10 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v11
         with:
-          nix-conf: |
-            extra-experimental-features = nix-command flakes
-            extra-substituters = https://cache.nixos.org/
-            extra-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+          extra-conf: |
+            experimental-features = nix-command flakes
+            substituters = https://cache.nixos.org/
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
       - name: Compute APT cache key
         id: aptmeta
