--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -35,6 +35,7 @@ frame-benchmarking = { workspace = true, optional = true }
 sp-io = { workspace = true }
 pallet-balances = { workspace = true }
 sp-runtime = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, features = ["app-crypto"] }
 
 [features]
 default = ["std"]
