--- a/Cargo.toml
+++ b/Cargo.toml
@@ -188,6 +188,7 @@ fork-tree = { version = "13.0.1" }
 ureq = { version = "3.1.2", default-features = false }
 url = { version = "2.5.7", default-features = false }
 blockfrost-openapi = { version = "0.1.75", default-features = false }
+chrono = { version = "0.4.31", default-features = false }
 
 # substrate dependencies
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2509" }
